--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lodash.debounce": "^4.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.9.0",
     "sass": "^1.58.2"
   },
   "devDependencies": {
